crates/daedalus/tests/ui/transport/fail_adapt_generic.stderr
error: adapt functions cannot be generic yet
 --> tests/ui/transport/fail_adapt_generic.rs:3:1
  |
3 | #[adapt(id = "test.generic", from = "test:value", to = "test:value")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `adapt` (in Nightly builds, run with -Z macro-backtrace for more info)
